<package>
  <name>arbotix</name>
  <version>0.10.0</version>
  <description>ArbotiX Drivers</description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>arbotix_msgs</run_depend>
  <run_depend>arbotix_python</run_depend>
  <run_depend>arbotix_sensors</run_depend>
  <run_depend>arbotix_controllers</run_depend>
  <run_depend>arbotix_firmware</run_depend>

  <export>
    <metapackage/>
  </export>
</package>


